[package]
name = "ls-mira-services"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.38"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.66", features = ["derive"] } 
serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["full"] }
